# neurallambda

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
arc/: t01_data_1d.py  t01_data_arc.py  t01_data_arc_like.py  t02_train_1d.py  t02_train_1d_02.py  t02_train_1d_serial_attn.py  t03_train_1d_hypernets.py  t03_train_1d_hypernets_02.py
demo/: README.md  common.py  d01_neurallambda.py  d02_palindrome.py  d02_palindrome_comparisons.py
doc/: README_V1_Lambda_Calculus_Variant.md  TODO.md  article_001_palindromes.md  logo.kra
example/: t01_sandbox.py
experiment/: t00_neurallambda_sandbox.py  t00_svd_sandbox.py  t01_complex_latch.py  t01_complex_latch_orig.py  t01_latch.py  t01_latch_resettable.py  t01_sandbox.py  t02_sine_wave.py  t03_modulo_game.py  t03_palindrome.py  t03_palindrome_02.py  t04_addition.py  t04_addition_02.py  t04_addition_03.py  t04_addition_sandbox.py  t04_addition_sandbox_02.py  t04_addition_sandbox_03_ml.py  t04_addition_sandbox_04_maps.py  t04_addition_sandbox_04_maps_02.py  t04_addition_sandbox_05_synth_data.py  t04_rng.py  t05_hyperdimensional_nand.py  t05_hyperdimensional_nand_02_substitution.py  t05_hyperdimensional_nand_03_against_memorization.py  t05_hyperdimensional_nand_03_against_memorization_02.py  t05_hyperdimensional_nand_04_against_memorization_03_stack.py  t06_rwkv_v4_sandbox.py  t07_transformer_sandbox.py  t07_transformer_stack_sandbox.py  t08_orthogonal_vecs.py  t09_readable_program_transformer.py  t10_indirection.py  t10_indirection_graveyard.py  t10_swap.py  t10_swap_02.py  t10_swap_03.py  (+46 more)
(+63 files in other folders)
